# 8trackslib

./: .gitignore  8trackslib.kdev4  CMakeLists.txt  LICENSE  README.md
include/: api.hpp  exception.hpp
src/: api.cpp  exception.cpp  main.cpp
